RESOLVED FIXED179991
[Win] PasteboardWin.cpp(653): error C2039: 'containsOnlyASCII': is not a member of 'WTF::String'
https://bugs.webkit.org/show_bug.cgi?id=179991
Summary [Win] PasteboardWin.cpp(653): error C2039: 'containsOnlyASCII': is not a memb...
Fujii Hironori
Reported 2017-11-23 20:08:20 PST
Since Bug 179907 (r225117). > PasteboardWin.cpp > C:\cygwin\home\buildbot\slave\win-debug\build\Source\WebCore\platform\win\PasteboardWin.cpp(653): error C2039: 'containsOnlyASCII': is not a member of 'WTF::String' [C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\Source\WebCore\WebCore.vcxproj] > C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\DerivedSources\ForwardingHeaders\wtf/PrintStream.h(43): note: see declaration of 'WTF::String'
Attachments
Patch (1.60 KB, patch)
2017-11-23 20:38 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-11-23 20:38:25 PST
WebKit Commit Bot
Comment 2 2017-11-23 21:40:01 PST
Comment on attachment 327522 [details] Patch Clearing flags on attachment: 327522 Committed r225127: <https://trac.webkit.org/changeset/225127>
WebKit Commit Bot
Comment 3 2017-11-23 21:40:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-23 21:41:30 PST
Note You need to log in before you can comment on or make changes to this bug.