[Win] PasteboardWin.cpp(653): error C2039: 'containsOnlyASCII': is not a member of 'WTF::String' https://bugs.webkit.org/show_bug.cgi?id=179991

Unreviewed build fix.

No new tests (No behaviour change).

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-11-23

* platform/win/PasteboardWin.cpp:
(WebCore::Pasteboard::writeURLToDataObject): Renamed containsOnlyASCII() to isAllASCII().

Canonical link: https://commits.webkit.org/195995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225127 268f45cc-cd09-0410-ab3c-d52691b4dbfc